--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,10 @@ dist.jar=${dist.dir}/serginho-lib-1.2.3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-codec-1.6.jar=/home/serginho/dev/lib/commons-codec-1.6.jar
-file.reference.jasperreports-4.7.1-serginho.jar=/home/serginho/dev/lib/jasperreports-4.7.1-serginho.jar
-file.reference.joda-time-1.6.jar=/home/serginho/dev/lib/joda-time-1.6.jar
-file.reference.xstream-1.4.3.jar=/home/serginho/dev/lib/xstream-1.4.3.jar
+file.reference.commons-codec-1.6.jar=D:\\Develop\\chequemate-libs\\commons-codec-1.6.jar
+file.reference.jasperreports-4.7.1-serginho.jar=D:\\Develop\\chequemate-libs\\jasperreports-4.7.1-serginho.jar
+file.reference.joda-time-1.6.jar=D:\\Develop\\chequemate-libs\\joda-time-1.6.jar
+file.reference.xstream-1.4.3.jar=D:\\Develop\\chequemate-libs\\xstream-1.4.3.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -43,6 +43,7 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.7
